--- a/africaruralconnectpiece.html
+++ b/africaruralconnectpiece.html
@@ -53,7 +53,7 @@
 							</section>
 					</div>
 
-		<!-- Contact -->
+		<!-- Contact 
 					<section id="contact">
 						<div class="inner">
 							<section>
@@ -104,7 +104,7 @@
 							</section>
 						</div>
 					</section>
-
+   -->
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
