--- a/africaruralconnectpiece.html
+++ b/africaruralconnectpiece.html
@@ -48,7 +48,7 @@
 										<h1>Africa Rural Connect</h1>
 									</header>	
                   								<p>As the program manager for Africa Rural Connect the online community for rural development I wrote a piece on the winner for Second Chances Idea contest. Africa Rural Connect introduces the Original Runner- up for the Second Chance Ideas Contest</p>
-                						  		<span class="image main"><embed src="images/ARCSecondChances.pdf" alt="articleARC" height="" width=""/></span>
+                						  		<span class="image main"><embed src="images/ARCSecondChances.pdf" alt="articleARC" height="100%" width="100%"/></span>
                                                                  </div>
 							</section>
 					</div>
