--- a/index.html
+++ b/index.html
@@ -114,8 +114,13 @@
 							</section>-->
 
 					</div>
+				<---Resume
+					<section id="resume">
+					<embed src="images/resume.pdf" alt="Mccloud Resume" height="2000px" width="100%"/>
+     					</section>
 
-				<!-- Contact -->
+	----->
+				<!-- Contact 
 					<section id="contact">
 						<div class="inner">
 							<section>
@@ -166,7 +171,7 @@
 							</section>
 						</div>
 					</section>
-
+            ---->
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
