--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
 							</section>-->
 
 					</div>
-				<---Resume
+				<!---Resume --->
 					<section id="resume">
 					<embed src="images/resume.pdf" alt="Mccloud Resume" height="2000px" width="100%"/>
      					</section>
 
-	----->
+	
 				<!-- Contact 
 					<section id="contact">
 						<div class="inner">
