--- a/index.html
+++ b/index.html
@@ -115,8 +115,13 @@
 
 					</div>
 				<!---Resume --->
-					<section id="resume">
-					<embed src="images/resume.pdf" alt="Mccloud Resume" height="2000px" width="100%"/>
+					<section id="resume">	
+						<article>
+							<header class="major">
+							<h1>Resume</h1>
+						        </header>
+								<embed src="images/resume.pdf" alt="Mccloud Resume" height="2000px" width="100%"/>
+						</article>
      					</section>
 
 	
