--- a/index.html
+++ b/index.html
@@ -116,12 +116,14 @@
 					</div>
 				<!---Resume --->
 					<section id="resume">	
-						<article>
+						<div class="inner">
+						
 							<header class="major">
-							<h1>Resume</h1>
+								<h1>Resume</h1>
 						        </header>
 								<embed src="images/resume.pdf" alt="Mccloud Resume" height="2000px" width="100%"/>
-						</article>
+						
+						</div>
      					</section>
 
 	
