--- a/index.html
+++ b/index.html
@@ -115,18 +115,19 @@
 
 					</div>
 				<!---Resume --->
-					<section id="resume">	
-						<div class="inner">
+					<div>
+						<section id="resume">	
+							<div class="inner">
 						
-							<header class="major">
-								<h1>Resume</h1>
-						        </header>
-								<embed src="images/resume.pdf" alt="Mccloud Resume" height="2000px" width="100%"/>
+								<header class="major">
+									<h1>Resume</h1>
+						        	</header>
+									<embed src="images/resume.pdf" alt="Mccloud Resume" height="2000px" width="100%"/>
 						
-						</div>
-     					</section>
+							</div>
+     						</section>
 
-	
+					</div>
 				<!-- Contact 
 					<section id="contact">
 						<div class="inner">
