--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@
 								<header class="major">
 									<h1>Resume</h1>
 						        	</header>
+								<div class="content">
 									<embed src="images/resume.pdf" alt="Mccloud Resume" height="2000px" width="100%"/>
-						
+								</div>
 							</div>
      						</section>
 
