--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					</div>
 				<!---Resume --->
 					<div>
-						<section id="resume">	
+						<section id="resume" class="major">	
 							<div class="inner">
 						
 								<header class="major">
