--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				---->	
 
 				<!-- Contact --->
-					<section id="resume">
+					<section id="contact">
 						<div class="inner">
 							<section>
 								<embed src="images/resume.pdf" alt="Mccloud Resume" height="2000px" width="100%"/>
