--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 									<header class="major">
 										<h2>Resume</h2>
 									</header>
-									<p>Political junkie, reader, traveler and firm believer that knowledge is power.</p>
+									<p>Political junkie, reader, traveler and firm believer that knowledge is power.
 									<embed src="images/resume.pdf" alt="Mccloud Resume" height="2000px" width="100%"/>
-								
+									</p>
 								</div>
 							</section>
 
