iframe for resume
link to external resume

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
 										<h2>Resume</h2>
 									</header>
 									<p>Political junkie, reader, traveler and firm believer that knowledge is power.
+									<iframe frameborder="0" scrolling="no"
+										width="640 height="480"
+										src="https://www.dropbox.com/s/ugl3rak4j4n1jv4/Resume.pdf?dl=0>
+									</iframe>
 									<embed src="images/resume.pdf" alt="Mccloud Resume" height="2000px" width="100%"/>
 									</p>
 								</div>
