--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">Writing</a></li>
-              <li><a href="resume.html">Resume</a></li>
+              						<li><a href="resume.html">Resume</a></li>
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="#" class="button special fit">Get Started</a></li>
@@ -48,9 +48,9 @@
 									<header class="major">
 										<h1>Resume</h1>
 									</header>	
-                  								<p>As the program manager for Africa Rural Connect the online community for rural development I wrote a piece on the winner for Second Chances Idea contest. Africa Rural Connect introduces the Original Runner- up for the Second Chance Ideas Contest</p>
-                						  		<embed src="images/resume.pdf" alt="articleARC" height="2000px" width="100%"/>
-                 </div>
+                  							<span class="image main"><img src="images/Resume_pg1.png" alt="Resume Page 1" height="" width=""/></span>
+									<span class="image main"><img src="images/Resume_pg2.png" alt="Resume Page 2" height="" width=""/></span>
+                 						</div>
 							</section>
 					</div>
 
@@ -60,9 +60,9 @@
 						<div class="inner">
 							
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://twitter.com/AdefromDC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="http://linkedin.com/in/adriennemccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 
 							<ul class="copyright">
