--- a/landing.html
+++ b/landing.html
@@ -34,6 +34,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">Writing</a></li>
 						        <li><a href="applicationportfolio.html">Applications</a></li>
+							<li><a href="resume.html">Resume</a></li>
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="#" class="button special fit">Get Started</a></li>
@@ -196,9 +197,9 @@
 						<div class="inner">
 							<ul class="icons">
 								
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="twitter.com/AdefromDC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="www.linkedin.com/in/adriennemccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
