--- a/africaruralconnectpiece.html
+++ b/africaruralconnectpiece.html
@@ -112,9 +112,9 @@
 						<div class="inner">
 							
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://twitter.com/AdefromDC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="www.linkedin.com/in/adriennemccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 
 							<ul class="copyright">
