menu and footer changes

--- a/pokemonyelp.html
+++ b/pokemonyelp.html
@@ -31,6 +31,9 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
+							<li><a href="landing.html">Writing</a></li>
+							<li><a href="applicationportfolio.html">Applications</a></li>
+							<li><a href="resume.html">Resume</a></li>
 					
 						</ul>
 				
@@ -48,7 +51,7 @@
 									<span class="image main"><img src="images/pokemonyelp1.png" alt="Pokemon Yelp app" height="" width=""/></span>
                   							<p>What it does:</p>
 									<p>This was a group project where the goal was to create an app that would allow users to find new business in a fun way.<br>
-                  We decided to build off the recent Pokemon craze and created Pokemon Yelp. Using the Google Play Services leaderboard, users are able to compete against friends.<br>
+                  							We decided to build off the recent Pokemon craze and created Pokemon Yelp. Using the Google Play Services leaderboard, users are able to compete against friends.<br>
 									<p>How it works:</p> User visit a business on Pokemon Yelp, once on the detail page the user is able to scan for pokemon. If the user is within a certain range of the business they are able to catch the pokmeon.</p>
                   							<p><strong>Technologies</strong></p>
 									<p>Android Studio, Git, SQLite, Rest API, Geolocation, Google Play Games Services</p>
@@ -60,114 +63,17 @@
 
 					</div>
 
-<!-- Contact
-
-					<section id="contact">
-
-						<div class="inner">
-
-							<section>
-
-								<form method="post" action="mailto:mccloud.adrienne@gmail.com">
-
-									<div class="field half first">
-
-										<label for="name">Name</label>
-
-										<input type="text" name="name" id="name" />
-
-									</div>
-
-									<div class="field half">
-
-										<label for="email">Email</label>
-
-										<input type="text" name="email" id="email" />
-
-									</div>
-
-									<div class="field">
-
-										<label for="message">Message</label>
-
-										<textarea name="message" id="message" rows="6"></textarea>
-
-									</div>
-
-									<ul class="actions">
-
-										<li><input type="submit" value="Send Message" class="special" /></li>
-
-										<li><input type="reset" value="Clear" /></li>
-
-									</ul>
-
-								</form>
-
-							</section>
-
-							<section class="split">
-
-								<section>
-
-									<div class="contact-method">
-
-										<span class="icon alt fa-envelope"></span>
-
-										<h3>Email</h3>
-
-										<a href="mailto:mccloud.adrienne@gmail.com">mccloud.adrienne@gmail.com</a>
-
-									</div>
-
-								</section>
-
-								<section>
-
-									<div class="contact-method">
-
-										<span class="icon alt fa-phone"></span>
-
-										<h3>Phone</h3>
-
-										<span>(240) 583-0259</span>
-
-									</div>
-
-								</section>
-
-								<section>
-
-									<div class="contact-method">
-
-										<span class="icon alt fa-home"></span>
-
-										<h3>Interested in:</h3>
-										<span>Full-time/Part-time/Contract/Freelance<br />
-										<h3>Locations:</h3>
-										Washington, DC, New York, NY, Denver, CO<br />
-										LA County, CA, Philadelphia, PA, </span>
-									</div>
-								</section>
-							</section>
-						</div>
-
-					</section>
-         -->
-
-
-
 				<!-- Footer -->
 
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
 
-								<li><a href="https://twitter.com/" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/AdefromDC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 
-								<li><a href="https://github.com/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 
-								<li><a href="https://linkedin.com/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="www.linkedin.com/in/adriennemccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 
 							</ul>
 
