--- a/worldviewinterview.html
+++ b/worldviewinterview.html
@@ -32,6 +32,8 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">Writing</a></li>
+							<li><a href="applicationportfolio.html">Applications</a></li>
+							<li><a href="resume.html">Resume</a></li>
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="#" class="button special fit">Get Started</a></li>
@@ -53,65 +55,7 @@
 							</section>
 								</div>
 
-		<!-- Contact 
-
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="mailto:mccloud.adrienne@gmail.com">
-															      
-									<div class="field half first">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-
-									<div class="field half">
-								  	<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-									  <label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="special" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="mailto:mccloud.adrienne@gmail.com">mccloud.adrienne@gmail.com</a>
-
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(240) 583-0259</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-home"></span>
-										<h3>Interested in:</h3>
-										<span>Full-time/Part-time/Contract/Freelance<br />
-										<h3>Locations:</h3>
-										Washington, DC, New York, NY, Denver, CO<br />
-										LA County, CA, Philadelphia, PA, </span>
-									</div>
-								</section>
-							</section>
-						</div>
-					</section>
-       -->
-
-				<!-- Footer -->
+				<!-- Footer 
 
 					<footer id="footer">
 						<div class="inner">
@@ -125,6 +69,7 @@
 							</ul>
 						</div>
 					</footer>
+				-->
 			</div>
 
 
