--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,8 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">Writing</a></li>
-              						<li><a href="resume.html">Resume</a></li>
+							<li><a href="applicationportfolio.html">Applications</a></li>
+							<li><a href="resume.html">Resume</a></li>
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="#" class="button special fit">Get Started</a></li>
