--- a/momscookbook.html
+++ b/momscookbook.html
@@ -66,10 +66,8 @@
 							<ul class="icons">
 
 								<li><a href="https://twitter.com/AdefromDC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-
-								<li><a href="github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-
-								<li><a href="www.linkedin.com/in/adriennemccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="http://linkedin.com/in/adriennemccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 
 							</ul>
 
