--- a/landing.html
+++ b/landing.html
@@ -139,67 +139,14 @@
 							------>
 					</div>
 
-				<!-- Contact 
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="mailto:mccloud.adrienne@gmail.com">
-									<div class="field half first">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="special" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="mailto:mccloud.adrienne@gmail.com">mccloud.adrienne@gmail.com</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(240) 583-0259</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-home"></span>
-										<h3>Interested in:</h3>
-										<span>Full-time/ Part-time/ Contract/ Freelance<br />
-										<h3>Locations:</h3>
-										Washington, DC
-										</span>
-									</div>
-								</section>
-							</section>
-						</div>
-					</section>
-                                -->
-
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
 								
-								<li><a href="twitter.com/AdefromDC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="www.linkedin.com/in/adriennemccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://twitter.com/AdefromDC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://github.com/FoochiRien" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="http://linkedin.com/in/adriennemccloud" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
